--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "^15.5.2",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.7",
     "papaparse": "^5.4.1",
     "pdfjs-dist": "^5.4.149",
     "plotly.js": "^2.27.1",
