Security & Deployment Readiness: rate limiting, security headers, input sanitization, audit logging, error pages (401/403/500), security wrapper, env config guide, security/performance test scripts, final readiness report

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "seed:demo": "node seed-demo-users.js"
+    "seed:demo": "node seed-demo-users.js",
+    "test:security": "node scripts/security-test.js",
+    "test:performance": "node scripts/performance-test.js",
+    "test:all": "npm run test:security && npm run test:performance",
+    "audit:security": "npm audit && npm run test:security",
+    "deploy:check": "npm run build && npm run test:all"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -49,6 +54,7 @@
     "framer-motion": "^12.23.12",
     "googleapis": "^159.0.0",
     "html2canvas": "^1.4.1",
+    "isomorphic-dompurify": "^2.26.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.542.0",
     "multer": "^2.0.2",
